--- a/frontend/college-event-planner/src/styles/EventList.css
+++ b/frontend/college-event-planner/src/styles/EventList.css
@@ -20,7 +20,7 @@
 }
 
 .retry-button {
-  background-color: #007bff;
+  background-color: #000080;
   color: white;
   padding: 8px 16px;
   margin-top: 10px;
@@ -73,11 +73,11 @@
 }
 
 .event-status.today {
-  color: #ff9800;
+  color: red;
 }
 
 .event-status.upcoming {
-  color: #4caf50;
+  color: green;
 }
 
 .event-status.past {
@@ -86,12 +86,14 @@
 
 .EventButton {
   margin-top: 12px;
+  display: flex;
+  gap: 2%;
 }
 
 .toggle-past-button {
   margin: 20px 0;
   padding: 8px 14px;
-  background-color: #007bff;
+  background-color: #000080;
   color: white;
   border: none;
   border-radius: 8px;
